@@ -3,6 +3,8 @@ package com.smartcampus.auth.controller;
 import com.smartcampus.auth.dto.AuthLoginRequest;
 import com.smartcampus.auth.dto.AuthResponse;
 import com.smartcampus.auth.dto.AuthSignupRequest;
+import com.smartcampus.auth.dto.AuthVerifyOtpRequest;
+import com.smartcampus.auth.dto.ResendOtpRequest;
 import com.smartcampus.auth.service.AuthService;
 
 import java.io.IOException;
@@ -14,8 +16,8 @@ import jakarta.servlet.http.HttpServletResponse;
 import org.springframework.beans.factory.annotation.Value;
 import org.springframework.web.bind.annotation.GetMapping;
 import org.springframework.web.bind.annotation.PostMapping;
-import org.springframework.web.bind.annotation.RequestMapping;
 import org.springframework.web.bind.annotation.RequestBody;
+import org.springframework.web.bind.annotation.RequestMapping;
 import org.springframework.web.bind.annotation.RestController;
 
 @RestController
@@ -42,14 +44,25 @@ public class AuthController {
 		return authService.signup(request);
 	}
 
+	@PostMapping("/verify-otp")
+	public AuthResponse verifyOtp(@RequestBody AuthVerifyOtpRequest request) {
+		return authService.verifyOtp(request);
+	}
+
+	@PostMapping("/resend-otp")
+	public AuthResponse resendOtp(@RequestBody ResendOtpRequest request) {
+		return authService.resendOtp(request);
+	}
+
 	@GetMapping("/google/dev")
 	public void googleDevLogin(HttpServletResponse response) throws IOException {
 		AuthResponse authResponse = authService.devGoogleLogin();
 		String redirectUrl = String.format(
-				"%s/#login?oauth=success&token=%s&email=%s&role=%s",
+				"%s/#login?oauth=success&token=%s&email=%s&name=%s&role=%s",
 				frontendUrl,
 				URLEncoder.encode(authResponse.token(), StandardCharsets.UTF_8),
-				URLEncoder.encode(authResponse.username(), StandardCharsets.UTF_8),
+				URLEncoder.encode(authResponse.email(), StandardCharsets.UTF_8),
+				URLEncoder.encode(authResponse.name(), StandardCharsets.UTF_8),
 				URLEncoder.encode(authResponse.role(), StandardCharsets.UTF_8)
 		);
 		response.sendRedirect(redirectUrl);
